--- a/devfile.yaml
+++ b/devfile.yaml
@@ -24,9 +24,9 @@ components:
             # The podman build -t <image> . && podman run <image> command will fail. 
             # Use podman build -t <image> . && podman push <image> && podman run <image> instead.
         - name: KUBEDOCK_ENABLED ## https://eclipse.dev/che/docs/stable/end-user-guide/running-containers-with-kubedock/
-          value: 'false' #'true'
-        #- name: CONTAINER_HOST
-        #  value: 'tcp://127.0.0.1:2475'
+          value: 'true'
+        - name: CONTAINER_HOST
+          value: 'tcp://127.0.0.1:2475'
           
           # registry token path to be used for podman authentication. Created from "RegistryAuthTokenSecret.yaml"
         - name: REGISTRY_AUTH_FILE ## https://docs.podman.io/en/latest/markdown/podman-login.1.html#authfile-path
