--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,8 +1,8 @@
 ---
 schemaVersion: 2.2.0
 metadata:
-  name: UniversalDevSpace
-  displayName: Universal Devspace
+  name: Python-Hello-world-Devspace
+  displayName: Python-Hello-world-Devspace
   description: Universal DevSpace utilizing quay.io/devfile/universal-developer-image:ubi8-latest
   icon: https://landscape.cncf.io/logos/devfile.svg
   tags:
