--- a/ML-sample/Containerfile
+++ b/ML-sample/Containerfile
@@ -1,7 +1,6 @@
 FROM quay.vapo.va.gov/vapo/va/python/python-312
 WORKDIR /opt/app-root/src
-RUN yum install -y python3-pip && \
-    yum clean all -y
+RUN dnf -y install python3-pip
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
 CMD ["python3", "./app.py"]
